--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
+.modal-par {
+  font-size: 1.1rem;
+}
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
